Changed 2nd screenshot on readme file

--- a/assets/style.css
+++ b/assets/style.css
@@ -51,6 +51,11 @@ footer {
     margin-right: 5%;   
 }
 
+#quiz-texttwo {
+    margin-left: 5%;
+    margin-right: 5%;   
+}
+
 #answera {
     background-color: gold;
     color: indigo;
